--- a/static/basic.css
+++ b/static/basic.css
@@ -46,6 +46,8 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     border-radius:3px;
     padding: 10px 10px;
     margin: 5px auto;
+    font-size: 16px;
+    font-weight: bold;
 }
 .popup button{
     color: white;
@@ -54,6 +56,8 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     margin:5px auto;
     background-color:#448899;
     width: 100%;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .bigtext{
@@ -62,13 +66,10 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 
 .close {
     position: absolute;
-    top: 20px;
-    left: 300px;
-    font-size: 20px;
+    top: 5px;
+    right:25px;
+    font-size: 30px;
     cursor: pointer;
-    width: 30px;
-    height: 30px;
-    padding: 7px
 }
 
 .overlay {
