--- a/static/index.css
+++ b/static/index.css
@@ -35,7 +35,7 @@ body{font-weight:bold;}
       position: absolute;bottom:0;left:0;right:0;z-index: 1;
       display:flex;align-items:center;
       line-height:40px;padding-left:10px;
-      color: #FFFFFF;font-weight:bold;background-color:#000000;
+      color: #FFFFFF;font-weight:bold;background-color:rgba(0, 0, 0, 0.6);
  }
 .attraction_info{
       line-height:40px;
