--- a/static/basic.css
+++ b/static/basic.css
@@ -38,8 +38,12 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     z-index: 1000;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+
+    border-image: linear-gradient(to right,#66AABB,#337788) 1;
+    border-width: 10px 0 0 0;
+    border-style: solid;
     border-radius:6px;
-    border-top:#448899;
+
     font-weight:bold;
 }
 
@@ -89,6 +93,6 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 
 @media screen and (max-width:600px){
     .popup{
-        width:60%;
+        width:80%;
     }
 }
