--- a/static/basic.css
+++ b/static/basic.css
@@ -23,7 +23,10 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
     font-size:24px;
     /* font-weight:bold; */
 }
-.signUp_success{
+.signUp_message{
+    color: red;
+}
+.signIn_message{
     color: red;
 }
 
@@ -31,7 +34,7 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 .popup {
     width: 340px;
     position: fixed;
-    top: 25%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
@@ -74,9 +77,9 @@ footer{width:100%;height:100px;background-color: #757575;color:white;
 
 .close {
     position: absolute;
-    top: 5px;
+    top: 10px;
     right:25px;
-    font-size: 30px;
+    font-size: 40px;
     cursor: pointer;
 }
 
