--- a/static/css/index.css
+++ b/static/css/index.css
@@ -2,7 +2,7 @@ body{font-weight:bold;}
 
 .container{width:1200px;margin:10px auto 10px auto}
 
-.banner{background-image:url("./image/image_101.png");background-size:cover;
+.banner{background-image:url("../image/image_101.png");background-size:cover;
         width:100%;height:300px;
         position:absolute;left:0;z-index:-1;}
 .banner_content{color:#F8F8F8;font-weight:bold;
