--- a/templates/attraction.html
+++ b/templates/attraction.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台北一日遊</title>
-    <link rel="stylesheet" type="text/css" href="../static/basic.css">
-    <link rel="stylesheet" type="text/css" href="../static/attraction.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/basic.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/attraction.css">
 </head>
 <body>
     <div class="header_load"></div>
@@ -55,8 +55,8 @@
     <div class="footer_load"></div>
 
 </body>
-<script src="../static/basic.js"></script>
-<script src="../static/member.js"></script>
-<script src="../static/attraction.js"></script>
+<script src="../static/js/basic.js"></script>
+<script src="../static/js/member.js"></script>
+<script src="../static/js/attraction.js"></script>
 
 </html>
