--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台北一日遊</title>
-    <link rel="stylesheet" type="text/css" href="../static/basic.css">
-    <link rel="stylesheet" type="text/css" href="../static/index.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/basic.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/index.css">
 </head>
 <body>
     <div class="header_load"></div>
@@ -34,8 +34,8 @@
 
 
 </body>
-<script src="../static/basic.js"></script>
-<script src="../static/member.js"></script>
-<script src="../static/index.js"></script>
+<script src="../static/js/basic.js"></script>
+<script src="../static/js/member.js"></script>
+<script src="../static/js/index.js"></script>
 
 </html>
