--- a/templates/booking.html
+++ b/templates/booking.html
@@ -51,10 +51,6 @@
             </div>
             <br>
 
-            <!-- <div class="tpfield" ></div>
-            <div class="tpfield" id="card-expiration-date"></div>
-            <div class="tpfield" id="card-ccv"></div> -->
-
         </div>
         <br>
         <div class="noBookingShow hide">目前沒有任何待預定的行程</div>
@@ -67,51 +63,9 @@
 <script src="../static/js/basic.js"></script>
 <script src="../static/js/member.js"></script>
 <script src="../static/js/booking.js"></script>
-<!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script> -->
 <script src="https://js.tappaysdk.com/sdk/tpdirect/v5.14.0"></script>
-<script>
-    TPDirect.setupSDK('137044', 'app_aYW5sz94fqr6ZtVWP0y9W95wXht3gqkjb8uPua3eHvpX5yGMTLwgCQ8dUIWa', 'sandbox')
-    TPDirect.card.setup({
-        fields: {
-            number: {
-                element: '#card-number',
-                placeholder: '**** **** **** ****'
-            },
-            expirationDate: {
-                element: document.getElementById('card-expiration-date'),
-                placeholder: 'MM / YY'
-            },
-            ccv: {
-                element: '#card-ccv',
-                placeholder: 'ccv'
-            }
-        }
-        });
+<script src="../static/js/order.js"></script>
 
 
-    const bookingButton = document.querySelector(".booking_button");
-    bookingButton.addEventListener("click", function() {
-
-        const tappayStatus = TPDirect.card.getTappayFieldsStatus()
-        console.log(tappayStatus)
-
-        if (tappayStatus.canGetPrime === false) {
-            alert('can not get prime')
-            return
-        }
-        TPDirect.card.getPrime((result) => {
-            if (result.status !== 0) {
-                alert('get prime error ' + result.msg)
-                return
-            }
-            alert('get prime 成功，prime: ' + result.card.prime)
-            // send prime to your server, to pay with Pay by Prime API .
-            // Pay By Prime Docs: https://docs.tappaysdk.com/tutorial/zh/back.html#pay-by-prime-api
-        })
-    });
-
-
-
-</script>
 
 </html>
